--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: adk_dart
 description: Core Dart port of Agent Development Kit (ADK) runtime primitives.
 version: 0.1.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/adk-labs/adk_dart
+homepage: https://github.com/adk-labs/adk_dart
+issue_tracker: https://github.com/adk-labs/adk_dart/issues
 
 environment:
   sdk: ^3.11.0
