--- a/packages/adk/pubspec.yaml
+++ b/packages/adk/pubspec.yaml
@@ -9,8 +9,7 @@ environment:
   sdk: ^3.11.0
 
 dependencies:
-  adk_dart:
-    path: ../..
+  adk_dart: ^0.1.1
 
 dev_dependencies:
   lints: ^6.0.0
