--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ environment:
   sdk: ^3.11.0
 
 # Add regular dependencies here.
-dependencies:
   # path: ^1.9.0
 
 executables:
@@ -24,3 +23,6 @@ executables:
 dev_dependencies:
   lints: ^6.0.0
   test: ^1.25.6
+dependencies:
+  google_generative_ai: ^0.4.7
+  http: ^1.2.2
