--- a/packages/flutter_adk/example/pubspec.yaml
+++ b/packages/flutter_adk/example/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_markdown_plus: ^1.0.7
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   integration_test:
