--- a/packages/flutter_adk/pubspec.yaml
+++ b/packages/flutter_adk/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_adk
 description: Flutter facade package for adk_dart core runtime on all Flutter platforms.
-version: 2026.3.1+1
+version: 2026.3.2
 repository: https://github.com/adk-labs/adk_dart
 homepage: https://github.com/adk-labs/adk_dart
 issue_tracker: https://github.com/adk-labs/adk_dart/issues
@@ -16,7 +16,7 @@ environment:
   flutter: '>=3.3.0'
 
 dependencies:
-  adk_dart: ^2026.3.1
+  adk_dart: ^2026.3.2
   flutter:
     sdk: flutter
   flutter_web_plugins:
